control connection added, some typos fixed

--- a/CourseWork/appendix.tex
+++ b/CourseWork/appendix.tex
@@ -37,6 +37,8 @@
 
 \lstinputlisting[language={Java},caption={Ограничения сетей},label={list:ConnectionType-const}]{listings/constraints/Net.txt}
 
+\lstinputlisting[language={Java},caption={Ограничения переходов},label={list:ConnectionType-const}]{listings/constraints/Transition.txt}
+
 \chapter{Описания редакторов концепций} \label{AppendixC}
 
 \begin{figure}[ht]
