--- a/CourseWork/course.tex
+++ b/CourseWork/course.tex
@@ -10,7 +10,7 @@
 		Абстрактное синтаксическое дерево (англ. Abstract Syntax Tree) - логическое представление кода в памяти в виде дерева, который описывает иерархию узлов. Эти узлы имеют понятие отношений родитель-ребенок. Кроме того, два узла могут быть соединены друг с другом с явными ссылками, которые идут по всей иерархической структуре.
 		
 		\begin{figure}[ht] 
-			\center
+			\centering
 			\includegraphics [scale=0.27] {AST}
 			\caption{Абстрактное синтаксическое дерево} 
 			\label{img:AST}  
@@ -97,10 +97,10 @@
 		
 
 		
-\chapter{Проектирование}
+\chapter{Проектирование языка}
 	\section{Определение структуры языка}
 		
-		На основе описания ДВС составим модель концепций и их связей и представим её в виде АСД (рис. \ref{img:dcn-AST}). Здесь аналогично рис. \ref{img:AST}, связи без направления обозначают отношение родительских концепции к дочернией, где родитель находится выше дочерней концепции, а направленные связи обозначают ссылку на концепцию.
+		На основе описания ДВС составим модель концепций и их связей и представим её в виде АСД (рис. \ref{img:dcn-AST}). Здесь аналогично рис. \ref{img:AST}, связи без направления обозначают отношение родительских концепции к дочерней, где родитель находится выше дочерней концепции, а направленные связи обозначают ссылку на концепцию.
 		
 		\begin{figure}[ht] 
 			\center
@@ -109,7 +109,7 @@
 			\label{img:dcn-AST}  
 		\end{figure}
 	
-		Как видно из схемы, можно выделить 2 интерфейса. Первый содержит параметр -- время выполнения и называется "исполняемый". Второй содержит параметр -- количество ресурсов и называется "держатель ресурсов".
+		Как видно из схемы, можно выделить 2 интерфейса. Первый содержит параметр -- время выполнения и называется <<исполняемый>>. Второй содержит параметр -- количество ресурсов и называется <<держатель ресурсов>>.
 	
 		Реализацию концепций можно увидеть в прил. \ref{AppendixA}.
 		
@@ -119,11 +119,12 @@
 		\begin{enumerate}
 			\item \textbf{Цвет:} все компоненты цвета должны находиться в диапазоне от 0 до 255 в соответствии с цветовой моделью RGB.
 			\item \textbf{Ресурсы:} все ресурсы должны иметь уникальные имена внутри модели
-			\item \textbf{Держатель ресурсов:} количество ресусов должно быть неотрицательно.
-			\item \textbf{Исполняемый:} время испольнения должно быть неотрицательно.
+			\item \textbf{Держатель ресурсов:} количество ресурсов должно быть неотрицательно.
+			\item \textbf{Исполняемый:} время исполнения должно быть неотрицательно.
 			\item \textbf{Место:} имя места должно быть уникально внутри содержащей его сети.
 			\item \textbf{Сеть:} имя сети должно быть уникально внутри модели.
-			\item \textbf{Связь:} может связывать переход только с местом, описанным в той же сети.
+			\item \textbf{Связь:} может связывать переход только с местом, описанным в той же сети. Если тип связи <<Контролирующая>>, ресурс места должен быть \textit{Nat}.
+			\item \textbf{Переход:} если не связан с сетью-объектом, не может иметь контролирующих связей.
 		\end{enumerate}
 			
 		Реализация ограничений описана в прил. \ref{AppendixB}
@@ -136,7 +137,7 @@
 
 		\begin{figure}[th]
 			\centering
-			\includegraphics[width=0.7\linewidth]{images/test-project/project-tree}
+			\includegraphics[width=0.3\linewidth]{images/test-project/project-tree}
 			\caption{Файлы тестового проекта.}
 			\label{fig:project-tree}
 		\end{figure}
@@ -148,6 +149,7 @@
 		
 		\lstinputlisting[language={Java},caption={Ресурс Car},label={list:Car}]{listings/test/Car.txt}
 		\lstinputlisting[language={Java},caption={Ресурс Bike},label={list:Bike}]{listings/test/Bike.txt}
+		\lstinputlisting[language={Java},caption={Ресурс Nat},label={list:Nat}]{listings/test/Nat.txt}
 		
 		Представление распознаётся, как корректное.
 		
@@ -170,14 +172,37 @@
 				\caption{Возможные значения ссылки на место у связи.}
 				\label{fig:connection-test}
 			\end{figure}
-	
+			\FloatBarrier
+			
 			Также проверим корректность проверки времени. На рис. \ref{fig:time} приведены результаты.
 	
 			\begin{figure}[th]
 				\centering
-				\includegraphics[width=0.7\linewidth]{images/test-project/time}
-				\caption{}
+				\includegraphics[width=0.4\linewidth]{images/test-project/time}
+				\caption{Подсветка некорректного значения времени}
 				\label{fig:time}
+			\end{figure}
+			\FloatBarrier
+			\clearpage
+		
+			Убедимся, что нельзя задать контролирующую связь с местом, ресурс которого отличен от <<Nat>> (рис. \ref{fig:control-connection}).
+			
+			\begin{figure}[th]
+				\centering
+				\includegraphics[width=0.7\linewidth]{images/test-project/control-connection}
+				\caption{Контролирующая связь, связанная с местом, тип которого отличен от <<Nat>>}
+				\label{fig:control-connection}
+			\end{figure}
+			\FloatBarrier
+			\clearpage
+		
+			\subsection{Некорректная реализация перехода}
+			Удостоверимся, что нельзя задать контролирующую связь для перехода, не связанного с сетью-объектом (рис. \ref{fig:control-without-net}).
+			\begin{figure}[th]
+				\centering
+				\includegraphics[width=0.7\linewidth]{images/test-project/control-without-net}
+				\caption{Переход, не связанный с сетью-объектом, но имеющий контролирующий переход.}
+				\label{fig:control-without-net}
 			\end{figure}
 		
 	
