--- a/CourseWork/theorical_introduction.tex
+++ b/CourseWork/theorical_introduction.tex
@@ -1,8 +1,7 @@
 \section{Описание динамических вычислительных сетей}
   \subsection{Сети Петри}
   
-	  Формально сеть Петри определена в~\cite{piterson} и представляет собой двудольный граф с двумя родами вершин: одни вершины называются позициями, другие
-	  называются переходами. 
+	  Формально сеть Петри определена в~\cite{piterson} и представляет собой двудольный граф с двумя родами вершин: одни вершины называются позициями, другие называются переходами. 
 	  Построение моделей систем в виде сетей Петри заключается в следующем:
 	  \begin{enumerate}
 	  	\item 	Моделируемые процессы описываются множеством событий (действий) и условий определяющих возможность наступления этих событий, а также причинно-следственными отношениями, устанавливаемыми на множестве пар "события-условия".
@@ -32,11 +31,11 @@
 	  		\label{img:petri-net}
 	  	\end{figure}
 	  
-	  Сетью Петри принято называть тройку $<G, m_0,\rho>$  , где  $G\equiv<P,T,I,O>$ "--- граф сети Петри, $P$   "--- конечное множество позиций (или мест) сети, $T$ "--- конечное множество переходов сети, $P \cap T = \varnothing$. $I,O:T\rightarrow P^{()}$  "--- функции, задающие комплекты входных и, соответственно, выходных позиций переходов сети (здесь $P^{()}$  "--- множество всевозможных конечных комплектов элементов мно-жества $P$ ). $M \cong P^{()}$ "--- множество всевозможных состояний сети (маркировок).  $m_0 \in M$ "--- начальная маркировка сети, задающая начальное состояние сети, $\rho:T\rightarrow C$ "--- функция раскраски, возможно частичная, где $C$  "--- множество красок.
+	  Сетью Петри принято называть тройку $<G, m_0,\rho>$  , где  $G\equiv<P,T,I,O>$ "--- граф сети Петри, $P$   "--- конечное множество позиций (или мест) сети, $T$ "--- конечное множество переходов сети, $P \cap T = \varnothing$. $I,O:T\rightarrow P^{()}$  "--- функции, задающие комплекты входных и, соответственно, выходных позиций переходов сети (здесь $P^{()}$  "--- множество всевозможных конечных комплектов элементов множества $P$ ). $M \cong P^{()}$ "--- множество всевозможных состояний сети (маркировок).  $m_0 \in M$ "--- начальная маркировка сети, задающая начальное состояние сети, $\rho:T\rightarrow C$ "--- функция раскраски, возможно частичная, где $C$  "--- множество красок.
 	  
 	  Сеть называется ограниченной, если $ (\forall p \in P) (\exists k \in \textit{nat}) (\forall m \in \mu_0) (m(p) \leq k)$, то есть множество достижимых в сети маркировок конечно.
 	  
-	Ограниченная сеть Петри $S$ на множестве позиций $P$, $|P|\in \aleph_0$, может быть представлена следуюзим образом~\cite{falkTheory}:\\ 
+	Ограниченная сеть Петри $S$ на множестве позиций $P$, $|P|\in \aleph_0$, может быть представлена следующим образом~\cite{falkTheory}:\\ 
 	$ S \subseteq P^{()} \times (P^{()} \times P^{()}) $
 	
 	Неограниченная сеть Петри $S$ на  $P$, $|P|\in \aleph_0$:	$ S \subseteq P^{()} \times 2^{P^{()} \times P^{()}} $
