--- a/CourseWork/title.tex
+++ b/CourseWork/title.tex
@@ -19,7 +19,7 @@
 
 \vspace{0pt plus7fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
 \begin{center}%
-	\Large\MakeUppercase{Курсовая работа}
+	\Large\MakeUppercase{Курсовой проект}
 	
 	\large По курсу <<\courseName>>
 	
