--- a/common/concl.tex
+++ b/common/concl.tex
@@ -3,7 +3,7 @@
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
 	
-	\item Изучиены способы реализации DSL.
+	\item Изучены способы реализации DSL.
 	\item Составлена концептуальная модель языка для реализации динамических вычислительных сетей.
 	\item Реализован язык в системе Meta Programming System.
 	\item Язык протестирован и удовлетворяет всем указанным ограничениям.
