--- a/common/data.tex
+++ b/common/data.tex
@@ -13,9 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Разработка экспертной ситсемы в среде GURU}{Разработка экспертной ситсемы в среде GURU}}
 \newcommand{\courseName}
-{Название Предмета}
+{Экспертные системы}
 \newcommand{\labNumber}
 {1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Еремеев Александр Павлович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{А.П.~Еремеев}
 
 
 % To avoid conflict with beamer class use \providecommand
