--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,5 +1,21 @@
 	\section{Цель работы}
+		Разработать экспертную систему с использованием среды GURU.
 		
-	\section{Порядок выполенения работы}
+	\section{Предметная область}
+		Целевая ЭС выполняет функцию оценки платформ для социальной торговли. Социальная торговля -- онлайн-трейдинг на финансовых рынках в рамках социальной платформы, внутри которой трейдеры взаимодействуют друг с другом.
+		
+		На рисунке \ref{tree} изображено дерево целей экспертной системы. Дугами отмечены вершины И, отсутствием дуг ИЛИ.
+		
+		\begin{figure}[ht] 
+			\center
+			\includegraphics [width=\textwidth] {social-trading}
+			\caption{Дерево целей} 
+			\label{tree}
+		\end{figure}
+		\FloatBarrier
+		
+	\section{Примеры выполнения}
 	
-	\section{Вывод}
+	\section{Листинг}
+	
+	\lstinputlisting[caption={Листинг программы}]{listings/st.rss}
