Cleanup for new lab

--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -33,23 +33,23 @@
 		
 	\section{Листинг}
 	
-	\lstinputlisting[caption={Листинг программы}]{listings/st.rss}
+%	\lstinputlisting[caption={Листинг программы}]{listings/st.rss}
 	
 	\newpage
 	\section{Примеры выполнения}
-		\begin{figure}[ht] 
-			\center
-			\includegraphics [width=\textwidth] {success}
-			\caption{Пример хорошей платформы} 
-		\end{figure}
-		\FloatBarrier
-		
-		\begin{figure}[ht] 
-			\center
-			\includegraphics [width=\textwidth] {failure}
-			\caption{Пример плохой платформы} 
-		\end{figure}
-		\FloatBarrier
+%		\begin{figure}[ht] 
+%			\center
+%			\includegraphics [width=\textwidth] {success}
+%			\caption{Пример хорошей платформы} 
+%		\end{figure}
+%		\FloatBarrier
+%		
+%		\begin{figure}[ht] 
+%			\center
+%			\includegraphics [width=\textwidth] {failure}
+%			\caption{Пример плохой платформы} 
+%		\end{figure}
+%		\FloatBarrier
 	
 	\section{Вывод}
 		В результате данной работы была спроектирована разработана ЭС, которая позволяет дать экспертную оценку платформам социальной торговли по введенным параметрам. Изучена программа GURU.
