--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка экспертной ситсемы в среде GURU}{Разработка экспертной ситсемы в среде GURU}}
+{\texorpdfstring{Разработка экспертной ситсемы в среде CLIPS}{Разработка экспертной ситсемы в среде CLIPS}}
 \newcommand{\courseName}
 {Экспертные системы}
 \newcommand{\labNumber}
-{1}
+{2}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
