--- a/LabWork.tex
+++ b/LabWork.tex
@@ -22,6 +22,9 @@
 
 \usepackage{hyperref} %ссылки на сторонние ресурсы
 
+\lstset{
+	inputencoding=cp1251
+}
 \renewcommand\thesection{\arabic{section}} %номера секций не содержат номер главы
 
 \begin{document}
