--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,55 +1,40 @@
-	\section{Цель работы}
-		Разработать экспертную систему с использованием среды GURU.
-		
-	\section{Предметная область}
-		Целевая ЭС выполняет функцию оценки платформ для социальной торговли. Социальная торговля -- онлайн-трейдинг на финансовых рынках в рамках социальной платформы, внутри которой трейдеры взаимодействуют друг с другом.
-		
-		На рисунке \ref{tree} изображено дерево целей экспертной системы. Дугами отмечены вершины И, отсутствием дуг ИЛИ.
-		
-		\begin{figure}[ht] 
-			\center
-			\includegraphics [width=\textwidth] {social-trading}
-			\caption{Дерево целей} 
-			\label{tree}
-		\end{figure}
-		\FloatBarrier
-		
-	\section{Описание ЭС}
+\section{Цель работы}
+	Разработать экспертную систему с использованием среды CLIPS.
 	
+\section{Предметная область}
+	Целевая ЭС выполняет функцию оценки платформ для социальной торговли. Социальная торговля -- онлайн-трейдинг на финансовых рынках в рамках социальной платформы, внутри которой трейдеры взаимодействуют друг с другом.
+	
+	На рисунке \ref{tree} изображено дерево целей экспертной системы. Дугами отмечены вершины И, отсутствием дуг ИЛИ.
+	
+	\begin{figure}[ht] 
+		\center
+		\includegraphics [width=\textwidth] {social-trading}
+		\caption{Дерево целей} 
+		\label{tree}
+	\end{figure}
+	\FloatBarrier
+
 	На основе дерева целей описаны переменные и правила, представленные в листинге.
 	
-	Системная переменная $ E.CFVA $, которая определяет формулу объединения факторов уверенности левой и правой частей правила имеет значение <<pp>>, т.е. фактор уверенности для операции <<И>> вычисляется по формуле $(a * b) / 100$, а для правила <<ИЛИ>> - по формуле 	$a + b - (a * b) / 100$
+	Фактор уверенности для операции <<И>> вычисляется по формуле $(a * b) / 100$, а для правила <<ИЛИ>> - по формуле 	$a + b - (a * b) / 100$
 	
-	Системная переменная $E.TRAC = <n>$ определяет режим работы системы – без трассировки.
+\newpage	
+\section{Листинг}
+
+	\lstinputlisting[language=Lisp, caption={Листинг программы}]{listings/st.clp}
+
+\newpage
+\section{Примеры выполнения}
+
+	Для начала работы необходимо загрузить программу в консоль CLIPS. Делается это с помощью команды \textit{load}, как показано в листинге \ref{loading}.
 	
-	С помощью переменной $E.RIGR$ определяется режим проверки конфликтующих правил для достижения результата с заданной степенью точности. $E.RIGR = <с>$ – все возможные правила (полный перебор).
-	
-	Режим оценки $E.TRYP = <s>$ - проверка неизвестных переменных, пока значение какой-либо из них не будет получено.
-	 
-	$E.LNUM = 3$ -  длина числового значения для округления.
-	
-	$E.DECI = 0$ - число значащих цифр после запятой.
-	
-		
-	\section{Листинг}
-	
-%	\lstinputlisting[caption={Листинг программы}]{listings/st.rss}
-	
-	\newpage
-	\section{Примеры выполнения}
-%		\begin{figure}[ht] 
-%			\center
-%			\includegraphics [width=\textwidth] {success}
-%			\caption{Пример хорошей платформы} 
-%		\end{figure}
-%		\FloatBarrier
-%		
-%		\begin{figure}[ht] 
-%			\center
-%			\includegraphics [width=\textwidth] {failure}
-%			\caption{Пример плохой платформы} 
-%		\end{figure}
-%		\FloatBarrier
-	
-	\section{Вывод}
-		В результате данной работы была спроектирована разработана ЭС, которая позволяет дать экспертную оценку платформам социальной торговли по введенным параметрам. Изучена программа GURU.
+	\lstinputlisting[caption={Загрузка программы}, label=loading]{listings/load.txt}
+
+	В листинге \ref{good} приведён пример платформы с высоким рейтингом, а в листинге \ref{bad} - с низким.
+
+	\lstinputlisting[caption={Платформа с высоким рейтингом}, label=good]{listings/success.txt}
+
+	\lstinputlisting[caption={Платформа с низким рейтингом}, label=bad]{listings/failure.txt}
+
+\section{Вывод}
+	В результате данной работы была спроектирована разработана ЭС, которая позволяет дать экспертную оценку платформам социальной торговли по введенным параметрам. Изучена программа для создания экспертных систем CLIPS.
