--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка экспертной ситсемы в среде CLIPS}{Разработка экспертной ситсемы в среде CLIPS}}
+{\texorpdfstring{Разработка экспертной системы на основе Байесовской сети доверия в среде HUGIN}{Разработка экспертной системы на основе Байесовской сети доверия в среде HUGIN}}
 \newcommand{\courseName}
 {Экспертные системы}
 \newcommand{\labNumber}
-{2}
+{3}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
