Title prepared for MPI labs

--- a/LabWork/title.tex
+++ b/LabWork/title.tex
@@ -36,7 +36,7 @@
 		\raggedleft
 		\parbox{9cm}{% чтобы лучше смотрелось, подбирается самостоятельно
 			\begin{tabular}{  r  l }
-				Группа:	& А-13-12 \\
+				Группа:	& А-13м-16 \\
 				Студент: 	& \thesisAuthorShort \\
 				Преподаватель:	& \supervisorFioShort \\
 			\end{tabular}%
