--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{MPI. Измерение латентности и пропускной способности каналов обмена данными.}{MPI. Измерение латентности и пропускной способности каналов обмена данными.}}
 \newcommand{\courseName}
-{Название Предмета}
+{Параллельные языки программирования}
 \newcommand{\labNumber}
-{1}
+{2}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Кутепов Виталий Павлович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{В.П.~Кутепов}
 
 
 % To avoid conflict with beamer class use \providecommand
