Added extra commentaries to pictures

--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -88,11 +88,11 @@
 	На рисунке \ref{examples} изображены примеры работы БСД.
 	\begin{figure}[ht]
 		\begin{minipage}[ht]{0.49\linewidth}
-			\center{\includegraphics[width=0.8\linewidth]{result-normal} \\ а) Пример хорошей платформы}
+			\center{\includegraphics[width=0.8\linewidth]{result-normal} \\ а) Пример хорошей платформы с рейтингом 96\%}
 		\end{minipage}
 		\hfill
 		\begin{minipage}[ht]{0.49\linewidth}
-			\center{\includegraphics[width=0.85\linewidth]{result-bad} \\ б) Пример плохой платформы}
+			\center{\includegraphics[width=0.81\linewidth]{result-bad} \\ б) Пример плохой платформы c рейтингом 28\%}
 		\end{minipage}
 		\caption{Примеры выполнения.}
 		\label{examples}  
