--- a/common/data.tex
+++ b/common/data.tex
@@ -13,9 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Разработка онтологии в среде Protege}{Разработка онтологии в среде Protege}}
 \newcommand{\courseName}
-{Название Предмета}
+{Прикладная семиотика}
 \newcommand{\labNumber}
 {1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Фоминых Игорь Борисович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{И.Б.~Фоминых}
 
 
 % To avoid conflict with beamer class use \providecommand
