--- a/common/data.tex
+++ b/common/data.tex
@@ -13,9 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Постановка задачи на разработку компонента распределенной системы}{Постановка задачи на разработку компонента распределенной системы}}
 \newcommand{\courseName}
-{Название Предмета}
+{Распределённые системы и параллельные вычисления}
 \newcommand{\labNumber}
 {1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Куриленко Иван Евгеньевич}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{И.Е.~Куриленко}
 
 
 % To avoid conflict with beamer class use \providecommand
